# Hybrid-Database-Engine

./: .env.example  .gitignore  README.md  REQUIREMENTS.md  buffer_store.py  classification.py  db_init.py  delete_operation.py  docker-compose.yml  insert_operation.py  main.py  metadata_store.json  phase1_schema_registration.py  phase2_data_ingestion.py  pyproject.toml  read_operation.py  reclassify_migrate.py  report.md  requirements.txt  run.py  sample_operations.md  schema.json  simulation_code.py  update_operation.py
DBMS_ASG_2-main/: PIPELINE.md  README.md  codegen_prompt.md  f.json  main.py
DBMS_ASG_2-main/data/: buffer.json  hybrid.db  metadata.json
DBMS_ASG_2-main/hybrid_framework/: analysis.py  bettercrud.py  buffer_manager.py  classification.py  config.py  crud.py  curd.py  goodcrud.py  ingest.py  krud.py  main.py  metadata_manager.py  mongo_strategy.py  normalization_engine.py  query_engine.py  requirements.txt  schema.json  schema_registry.py  simulation_api.py
data/: metadata_store.json  schema.json  users.json
hybriddb/: __init__.py
hybriddb/analysis/: benchmark_runner.py  comparative_analysis.py
hybriddb/config/: paths.py
hybriddb/core/: clients.py  main.py  reclassify_migrate.py  sql_db.py  transaction_coordinator.py
hybriddb/crud/: delete_operation.py  insert_operation.py  read_operation.py  update_operation.py
hybriddb/dashboard/: dashboard_app.py
hybriddb/ingestion/: classification.py  phase1_schema_registration.py  phase2_data_ingestion.py
hybriddb/storage/: audit_store.py  buffer_store.py  db_init.py  query_history_store.py
(+5 files in other folders)
